# mnist

./: CMakeLists.txt  README.md  bfgs.cpp  bfgs.h  getImages.cpp  getImages.h  imageUtils.cpp  imageUtils.h  knnHandler.h  mnist_knn_v1.cpp  mnist_knn_v2.cpp  mnist_knn_v3.cpp  mnist_knn_v4.cpp  mnist_svm_predict.cpp  mnist_svm_train.cpp  svmPattern.cpp  svmPattern.h  svm_combine.cpp
